# goya

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh
client/: fs_client.cc
src/chunkserver/: chunkserver_impl.h
src/client/: fs_client.cc
src/common/: flags.cc  rpc_wrapper.h
src/master/: master_main.cc  masterserver_impl.cc  masterserver_impl.h
src/sdk/: file_client.h  file_client_impl.cc  file_client_impl.h
